resources.tf
resource "aws_vpc" "test_development_network" {
  cidr_block= "10.0.0.0/16"
  enable_dns_hostnames= true
  enable_dns_support= true
  tags{
      Name="terraform-aws-vpc-example-two"
  }

}

resource "aws_subnet" "subnet1" {
  #cidr_block="${aws_vpc.test_development_network.id}"
  cidr_block= "${cidrsubnet(aws_vpc.test_development_network.cidr_block, 3, 1)}"
  vpc_id="${aws_vpc.test_development_network.id}"
  availability_zone= "us-west-2a"
}

resource "aws_subnet" "subnet2" {
  #cidr_block="${aws_vpc.test_development_network.id}"
  cidr_block= "${cidrsubnet(aws_vpc.test_development_network.cidr_block, 2, 2)}"
  vpc_id="${aws_vpc.test_development_network.id}"
  availability_zone= "us-west-2b"
}

resource "aws_security_group" "subnetsecurity" {
  vpc_id= "${aws_vpc.test_development_network.id}"
  ingress{
    cidr_blocks=[
      "${aws_vpc.test_development_network.cidr_block}"
    ]
    from_port=80
    to_port=80
    protocol= "tcp"
  }
}
